# Event_Driven

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  LICENSE  README.md  deploy.sh  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: config.py  main.py  metrics.py
app/api/: __init__.py  events.py
app/models/: __init__.py  event.py
app/services/: __init__.py  email_service.py  event_publisher.py  rate_limiter.py  redis_client.py
docker/: Dockerfile.api  Dockerfile.worker
tests/: conftest.py  test_api.py  test_models.py  test_worker.py
worker/: consumer.py  retry.py
